--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,10 +1,11 @@
 footer {
-    border-top: 1px solid #fff2;
     padding: 2rem 0 0 0;
+    margin: auto 0 0 0 ;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
     gap: 2rem;
+    border-top: 1px solid #fff2;
 
 }
 
