--- a/src/components/GameCard/GameCard.css
+++ b/src/components/GameCard/GameCard.css
@@ -19,8 +19,9 @@
 
 .game__card img {
     width: 100%;
-    height: 240px;
+    aspect-ratio: 4/5;
     transition: .3s;
+    object-fit: cover;
 }
 
 .game__card-data {
@@ -63,13 +64,13 @@
 /* MB <= 767 - TB <= 1023 - */
 @media screen and (max-width: 767px) {
     .game__card {
-        width: 120px;
-        min-width: 120px;
+        width: 150px;
+        min-width: 150px;
     }
 
     .game__card img {
         width: 100%;
-        height: 150px;
+        aspect-ratio: 4/5;
         transition: .3s;
     }
 }
