--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -8,6 +8,8 @@
     background: #121216;
     display: flex;
     flex-direction: column;
+    transition: .3s;
+    z-index: 8;
 }
 
 .sideBar .header {
@@ -67,10 +69,10 @@
 }
 
 .sideBar__btn-logout {
-    padding: 1rem ;
+    padding: 1rem;
     background: none;
     border: none;
-    margin: auto 0 0 0 ;
+    margin: auto 0 0 0;
     font-size: 20px;
     display: flex;
     gap: .5rem;
@@ -81,15 +83,46 @@
     transition: .3s;
 
     &:hover {
-        opacity: .6;   
+        opacity: .6;
     }
 }
 
+.sideBar__btnShow {
+    width: 40px;
+    height: 40px;
+    position: fixed;
+    left: 1%;
+    top: 50%;
+    transform: translate(0, -50%);
+    display: none;
+    place-items: center;
+    background: #fdfdfd;
+    color: #121216;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: .3s;
+
+    &:hover {}
+}
+
+.sideBar__backdrop {
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: #0005;
+    backdrop-filter: blur(1px);
+    z-index: -1;
+}
 
 /* MB <= 767 - TB <= 1023 - */
 @media screen and (max-width: 767px) {
     .sideBar {
-        width: 60px;
-        overflow: hidden;
+        left: -280px;
+    }
+
+    .sideBar__btnShow {
+        display: grid;
     }
 }
