--- a/src/pages/Libs/Libs.css
+++ b/src/pages/Libs/Libs.css
@@ -15,6 +15,9 @@
 /* MB <= 767 - TB <= 1023 - */
 @media screen and (max-width: 767px) {
     .libs {
-        padding: 0 5% 0 calc(60px + 5%);
+        padding: 0 5%;
+    }
+    .libs__list {
+        justify-content: space-around;
     }
 }
