--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -99,6 +99,7 @@
     background: #fdfdfd;
     color: #121216;
     border-radius: 50%;
+    box-shadow: 3px 3px 5px #0003;
     cursor: pointer;
     transition: .3s;
 
