--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: "Exo 2", sans-serif;
   scroll-behavior: smooth;
 
 }
@@ -17,7 +21,3 @@ body {
   min-height: 100vh;
 }
 
-/* MB <= 767 - TB <= 1023 - */
-@media screen and (max-width: 767px) {
-
-}
