--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,10 @@ body {
   min-height: 100vh;
 }
 
+.inputForm {
+  @apply px-4 w-full py-2 mt-4 text-gray-700 placeholder-gray-500 bg-white border rounded-lg focus:border-green-400 focus:ring-opacity-40 outline-none focus:ring focus:ring-green-300;
+}
+
+.btnForm {
+  @apply px-6 py-3 text-sm font-medium tracking-wide text-white transition-colors duration-300 transform bg-green-600 rounded-lg hover:bg-green-500 outline-none focus:ring focus:ring-green-300 focus:ring-opacity-50 shadow-md;
+}
